--- a/校园导图/app.json
+++ b/校园导图/app.json
@@ -2,12 +2,15 @@
   "pages": [
     "pages/index/index",
     "pages/schoolnavigation/store",
+    
+    
+    "pages/schoolnavigation/schoolthings",
+   
     "pages/schoolnavigation/schoolnavigation",
-
+ 
+   
     "pages/schoolnavigation/news",
-
     "pages/schoolnavigation/report",
-
     "pages/logs/logs"
   ],
   "window": {
